[package]
name = "lila-http"
version = "0.1.0"
edition = "2021"
publish = false
description = "handle some of the load of lichess.org/tournament"
homepage = "https://lichess.org/tournament"
repository = "https://github.com/ornicar/lila-http"
readme = "README.md"
license = "AGPL-3.0+"
categories = ["games"]
keywords = ["chess", "lichess"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
axum = "0.4"
axum-extra = { version = "0.1", features = ["erased-json"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
moka = { version = "0.7", features = ["future"] }
redis = { version = "0.21", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2", features = ["set-header"] }
