[package]
name = "lila-http"
version = "0.1.0"
edition = "2021"
publish = false
description = "handle some of the load of lichess.org/tournament"
homepage = "https://lichess.org/tournament"
repository = "https://github.com/ornicar/lila-http"
readme = "README.md"
license = "AGPL-3.0+"
categories = ["games"]
keywords = ["chess", "lichess"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
axum = "0.6"
axum-extra = { version = "0.7", features = ["erased-json"] }
clap = { version = "4", features = ["derive", "deprecated"] }
env_logger = "0.10"
futures = "0.3"
itertools = "0.10"
log = "0.4"
moka = { version = "0.11", features = ["future"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["set-header"] }
